# backend/internal/app/router.go
@@ -117,6 +117,8 @@ func NewRouter(log *slog.Logger, appService *api) http.Handler {
 				r.Post("/me/api-keys", h.CreateAPIKey)
 				r.Get("/me/api-keys", h.GetAPIKeys)
 				r.Delete("/me/api-keys/{id}", h.RevokeAPIKey)
+
+				r.Delete("/me", h.DeleteAccount)
 			})
 
 			r.Get("/me/settings", h.GetSettings)
